extends Control




func _on_flamethrower_pressed():
	get_tree().change_scene("res://Rooms/menu_rooms/weapon_upgrades/weapon_upgrade_tree.tscn")


func _on_heatbeam_pressed():
	get_tree().change_scene("res://Rooms/menu_rooms/weapon_upgrades/weapon_upgrade_tree.tscn")


func _on_flametrail_pressed():
	get_tree().change_scene("res://Rooms/menu_rooms/weapon_upgrades/weapon_upgrade_tree.tscn")


func _on_lightning_spray_pressed():
	get_tree().change_scene("res://Rooms/menu_rooms/weapon_upgrades/weapon_upgrade_tree.tscn")


func _on_lightning_ball_pressed():
	get_tree().change_scene("res://Rooms/menu_rooms/weapon_upgrades/weapon_upgrade_tree.tscn")


func _on_lightning_tripwire_pressed():
	get_tree().change_scene("res://Rooms/menu_rooms/weapon_upgrades/weapon_upgrade_tree.tscn")


func _on_vacuum_blast_pressed():
	get_tree().change_scene("res://Rooms/menu_rooms/weapon_upgrades/weapon_upgrade_tree.tscn")


func _on_vacuum_bomb_pressed():
	get_tree().change_scene("res://Rooms/menu_rooms/weapon_upgrades/weapon_upgrade_tree.tscn")


func _on_vacuum_deploy_pressed():
	get_tree().change_scene("res://Rooms/menu_rooms/weapon_upgrades/weapon_upgrade_tree.tscn")


func _on_Button_pressed():
	get_tree().change_scene("res://Rooms/menu_rooms/hub_player_level_select.tscn")
